--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
-  "name": "serverless-nfr-presentation",
-  "version": "0.1.0",
-  "bin": {
-    "serverless-nfr-presentation": "bin/serverless-nfr-presentation.js"
-  },
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.4",
-    "@types/node": "20.5.9",
-    "jest": "^29.6.4",
-    "ts-jest": "^29.1.1",
-    "aws-cdk": "2.95.1",
-    "ts-node": "^10.9.1",
-    "typescript": "~5.2.2"
-  },
-  "dependencies": {
-    "aws-cdk-lib": "2.95.1",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
-  }
+	"name": "serverless-nfr-presentation",
+	"version": "0.1.0",
+	"bin": {
+		"serverless-nfr-presentation": "bin/serverless-nfr-presentation.js"
+	},
+	"scripts": {
+		"build": "tsc",
+		"watch": "tsc -w",
+		"test": "jest",
+		"cdk": "cdk",
+		"deploy-setup": "dotenv -e .env -- cdk deploy  AtlasSetupStack",
+		"deploy": "dotenv -e .env -- cdk deploy  ServerlessNfrStatefulStack ServerlessNfrStatelessStack",
+		"destroy": "dotenv -e .env -- cdk destroy  ServerlessNfrStatefulStack ServerlessNfrStatelessStack",
+		"perf-test": "dotenv -e .env.artillery -- artillery run ./artillery/performance-test.yml"
+	},
+	"devDependencies": {
+		"@aws-sdk/client-secrets-manager": "^3.583.0",
+		"@types/aws-lambda": "^8.10.138",
+		"@types/convict": "^6.1.6",
+		"@types/jest": "^29.5.4",
+		"@types/node": "20.5.9",
+		"@types/uuid": "^9.0.8",
+		"artillery": "^2.0.14",
+		"aws-cdk": "^2.103.0",
+		"awscdk-resources-mongodbatlas": "^3.5.2",
+		"dotenv-cli": "^7.4.2",
+		"jest": "^29.6.4",
+		"ts-jest": "^29.1.1",
+		"ts-node": "^10.9.1",
+		"tsconfig-paths": "^4.2.0",
+		"typescript": "~5.2.2"
+	},
+	"dependencies": {
+		"aws-cdk-lib": "^2.103.0",
+		"constructs": "^10.0.0",
+		"convict": "^6.2.4",
+		"mongoose": "^8.4.0",
+		"source-map-support": "^0.5.21",
+		"uuid": "^9.0.1"
+	}
 }
