--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,35 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
-    "declaration": true,
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": false,
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "experimentalDecorators": true,
-    "strictPropertyInitialization": false,
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
-  },
-  "exclude": [
-    "node_modules",
-    "cdk.out"
-  ]
+	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@infraConfig": ["lib/config"],
+			"@constructs": ["lib/constructs"],
+			"@dto/*": ["src/dto/*"],
+			"@adapters/*": ["src/adapters/*"],
+			"@models/*": ["src/models/*"],
+			"@config/*": ["src/config/*"],
+			"@use-cases/*": ["src/use-cases/*"],
+			"@shared/*": ["src/shared/*"]
+		},
+		"target": "ES2020",
+		"module": "commonjs",
+		"lib": ["es2020", "dom"],
+		"declaration": true,
+		"strict": true,
+		"noImplicitAny": true,
+		"strictNullChecks": true,
+		"noImplicitThis": true,
+		"alwaysStrict": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": false,
+		"inlineSourceMap": true,
+		"inlineSources": true,
+		"experimentalDecorators": true,
+		"strictPropertyInitialization": false,
+		"typeRoots": ["./node_modules/@types"],
+		"esModuleInterop": true
+	},
+	"exclude": ["node_modules", "cdk.out"]
 }
